<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.kdeek.baccalculator.MainActivity">


    <TextView
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/weight_lbs"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="80dp"
        android:layout_height="wrap_content"


        android:id="@+id/weight"
        android:layout_alignBottom="@+id/textView"
        android:layout_toRightOf="@+id/textView" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/saveButton"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="saveButtonClick" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/drink_size"
        android:id="@+id/Dsizelabel"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/saveButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/your_status"
        android:id="@+id/textView6"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/textView"
        android:gravity="center_horizontal"
        android:layout_alignEnd="@+id/textView"
        android:layout_marginBottom="45dp" />

    <Switch
        android:layout_marginTop="25dp"
        android:layout_marginLeft="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textSize="20sp"
        android:id="@+id/switch1"
        android:checked="false"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/weight"
        android:layout_toEndOf="@+id/weight" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_alignTop="@+id/Dsizelabel"
        android:layout_toRightOf="@+id/Dsizelabel"
        android:layout_toEndOf="@+id/Dsizelabel"
        android:layout_alignBottom="@+id/Dsizelabel"
        android:id="@+id/radioGrp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/_1_oz"
            android:id="@+id/oz1"
            android:checked="false"
            android:layout_toLeftOf="@+id/oz12" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/_5_oz"
            android:id="@+id/oz5"
            android:checked="false"
            android:layout_toLeftOf="@+id/oz1" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/_12_oz"
            android:id="@+id/oz12"
            android:checked="false"
            android:layout_toRightOf="@+id/oz5" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Alcohol %"
        android:id="@+id/alcPerlab"
        android:layout_below="@+id/Dsizelabel"
        android:layout_marginTop="25dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <SeekBar
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar"
        android:max="25"
        android:layout_marginLeft="10dp"
        android:layout_alignBottom="@+id/alcPerlab"
        android:layout_toRightOf="@+id/alcPerlab"
        android:layout_toEndOf="@+id/alcPerlab" />

    <Button
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="Add Drink"
        android:id="@+id/addDbut"
        android:layout_below="@+id/seekBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:onClick="addDrinkButtonClick" />

    <Button
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="Reset"
        android:id="@+id/resetBut"
        android:layout_alignTop="@+id/addDbut"
        android:layout_toRightOf="@+id/addDbut"
        android:layout_toEndOf="@+id/addDbut" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="0 %"
        android:id="@+id/textView2"
        android:layout_alignBottom="@+id/seekBar"
        android:layout_toRightOf="@+id/seekBar"
        android:layout_toEndOf="@+id/seekBar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="BAC Level : 0"
        android:id="@+id/bacOut"
        android:layout_below="@+id/addDbut"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="49dp"
        android:gravity="center_horizontal" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_below="@+id/bacOut"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/you_apos_re_safe"
        android:gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:id="@+id/statusOut"
        android:layout_alignBottom="@+id/textView6"
        android:layout_toRightOf="@+id/textView6"
        android:layout_toEndOf="@+id/textView6" />

</RelativeLayout>
